<resources>
    <string name="app_name">cafePDA</string>
    <string name="app_title">CafePDA</string>
    <string name="start">Start your shift!</string>
    <string name="tables_title">TABLES</string>
    <string name="table_1">TABLE 1</string>
    <string name="table_2">TABLE 2</string>
    <string name="table_3">TABLE 3</string>
    <string name="table_4">TABLE 4</string>
    <string name="table_5">TABLE 5</string>
    <string name="table_6">TABLE 6</string>
    <string name="empty_table">empty</string>
    <string name="item_title">Freddo Espresso</string>
    <string name="price_tag">2.5€</string>
    <string name="add">+</string>
    <string name="quantity">0</string>
    <string name="subtract">-</string>
    <string name="person_name">Your name:</string>
    <string name="name">Name</string>
    <string name="code_name">Code Name</string>
    <string name="item_image_description">Item_image_description</string>
    <string name="Send_Order">Send Order</string>
    <string name="ADD">ADD</string>
    <string name="order_account">Order Account</string>
    <string name="Dont_have_account">Do not have an account?</string>
    <string name="sign_in">Sign in!</string>
    <string name="password">Password:</string>
    <string name="open_orders">Open\nOrders</string>
    <string name="create_account">Create Account</string>
    <string name="order">ORDER</string>
    <string name="PIN">PIN</string> />
</resources>