<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="95dp"
        android:layout_height="37dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="36dp"
        android:text="@string/sign_in"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="90dp"
        android:layout_height="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="55dp"
        android:text="@string/person_name"
        app:layout_constraintEnd_toStartOf="@+id/name_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="55dp"
        android:text="@string/password"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/name_sign_in"
        android:layout_width="239dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="none"
        android:text=""
        android:hint="@string/name"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="246dp"
        android:layout_height="63dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/PIN"
        android:inputType="numberPassword"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/name_sign_in" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:onClick="newWaiter"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>