<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TablesActivity">


    <TextView
        android:id="@+id/title_tables"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/tables_title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btable1"
        android:layout_width="116dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#5ADDCD"
        android:onClick="MenuActivity"
        android:text="@string/table_1"
        android:textColor="#14322E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tables" />

    <Button
        android:id="@+id/btable2"
        android:layout_width="116dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#49B1A4"
        android:onClick="MenuActivity"
        android:text="@string/table_2"
        android:textColor="#20504A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btable1" />

    <Button
        android:id="@+id/btable3"
        android:layout_width="116dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#368379"
        android:onClick="MenuActivity"
        android:text="@string/table_3"
        android:textColor="#20504A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btable2" />

    <Button
        android:id="@+id/btable4"
        android:layout_width="116dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#29635C"
        android:onClick="MenuActivity"
        android:text="@string/table_4"
        android:textColor="#49B1A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btable3" />

    <Button
        android:id="@+id/btable5"
        android:layout_width="116dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#20504A"
        android:onClick="MenuActivity"
        android:text="@string/table_5"
        android:textColor="#49B1A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btable4" />

    <Button
        android:id="@+id/btable6"
        android:layout_width="116dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#14322E"
        android:onClick="MenuActivity"
        android:text="@string/table_6"
        android:textColor="#5ADDCD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btable5" />

    <TextView
        android:id="@+id/textseated1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/empty_table"
        app:layout_constraintStart_toEndOf="@+id/btable1"
        app:layout_constraintTop_toTopOf="@+id/btable1" />

    <TextView
        android:id="@+id/textseated2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/empty_table"
        app:layout_constraintStart_toEndOf="@+id/btable2"
        app:layout_constraintTop_toTopOf="@+id/btable2" />


    <TextView
        android:id="@+id/textseated3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/empty_table"
        app:layout_constraintStart_toEndOf="@+id/btable3"
        app:layout_constraintTop_toTopOf="@+id/btable3" />

    <TextView
        android:id="@+id/textseated4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/empty_table"
        app:layout_constraintStart_toEndOf="@+id/btable4"
        app:layout_constraintTop_toTopOf="@+id/btable4" />

    <TextView
        android:id="@+id/textseated5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/empty_table"
        app:layout_constraintStart_toEndOf="@+id/btable5"
        app:layout_constraintTop_toTopOf="@+id/btable5" />

    <TextView
        android:id="@+id/textseated6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/empty_table"
        app:layout_constraintStart_toEndOf="@+id/btable6"
        app:layout_constraintTop_toTopOf="@+id/btable6" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textColor="#BDBDBD"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/title_tables"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/openOrdersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFC107"
        android:onClick="openOrdersActivity"
        android:text="@string/open_orders"
        android:textColorLink="#8BC34A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="21dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btable6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Total income:"
        app:layout_constraintBottom_toTopOf="@+id/totalTextView"
        app:layout_constraintEnd_toStartOf="@+id/btable6"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btable6" />

</androidx.constraintlayout.widget.ConstraintLayout>