<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/item_image_description"
        app:srcCompat="@drawable/ic_launcher_background" /> -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_product"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="#FFFFFF"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/item_image_description"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF"
            android:text="@string/item_title"
            android:textColor="#38716D"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/product_image"
            card_view:layout_constraintTop_toTopOf="parent" />
        <!--app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="parent" />-->


        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/price_tag"
            android:textColor="#212121"
            android:textSize="20sp"
            card_view:layout_constraintStart_toEndOf="@+id/product_image"
            card_view:layout_constraintTop_toBottomOf="@+id/product_title" />
        <!-- app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toBottomOf="@+id/product_title" />-->

        <Button
            android:id="@+id/button_minus"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#BDBDBD"
            android:text="@string/subtract"
            card_view:layout_constraintEnd_toStartOf="@+id/quantity_text"
            card_view:layout_constraintStart_toEndOf="@+id/product_image"
            card_view:layout_constraintTop_toBottomOf="@+id/product_title" />

        <!--app:layout_constraintEnd_toStartOf="@+id/quantity_text"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toBottomOf="@+id/product_title" />-->

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/quantity"
            android:textColor="#212121"
            android:textSize="16sp"
            card_view:layout_constraintStart_toEndOf="@+id/button_minus"
            card_view:layout_constraintTop_toTopOf="@+id/button_minus" />

        <!--app:layout_constraintStart_toEndOf="@+id/button_minus"
        app:layout_constraintTop_toTopOf="@+id/button_minus" />-->

        <Button
            android:id="@+id/button_plus"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#BDBDBD"
            android:text="@string/add"
            card_view:layout_constraintStart_toEndOf="@+id/quantity_text"
            card_view:layout_constraintTop_toBottomOf="@+id/product_title" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="39dp"
            android:text="@string/ADD"

            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/euro_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="€"
            android:textColor="#000000"
            android:textSize="16sp"
            card_view:layout_constraintStart_toEndOf="@+id/price_text"
            card_view:layout_constraintTop_toBottomOf="@+id/product_title" />
        <!-- app:layout_constraintStart_toEndOf="@+id/quantity_text"
         app:layout_constraintTop_toBottomOf="@+id/product_title" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>